fixes search comp pathing, fixes z-index of search, adds imageId workaround, fixes missing dimension bug

--- a/packages/cms/src/profile/ProfileBuilder.css
+++ b/packages/cms/src/profile/ProfileBuilder.css
@@ -107,3 +107,8 @@
 .firstbutton {
   margin: 15px;
 }
+
+#Search {
+  z-index: 1;
+  position: relative;
+}
